[package]
name = "environment_interface"
version = "0.0.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
builtin_interfaces = "*"
unique_identifier_msgs = "*"
geometry_msgs = "*"
sensor_msgs = "*"
octomap_msgs = "*"
trajectory_msgs = "*"
action_msgs = "*"
shape_msgs = "*"
object_recognition_msgs = "*"
moveit_msgs = "*"
std_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'builtin_interfaces/serde', 'unique_identifier_msgs/serde', 'geometry_msgs/serde', 'sensor_msgs/serde', 'octomap_msgs/serde', 'trajectory_msgs/serde', 'action_msgs/serde', 'shape_msgs/serde', 'object_recognition_msgs/serde', 'moveit_msgs/serde', 'std_msgs/serde']

[package.metadata.ros-env]
include = true
